2004-09-03  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsubsection{Pramanick and Bhartia}):
	Documented dispersion model of characteristic impedance by
	Pramanick.

2004-09-02  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsubsection{Hammerstad and Jensen}): Fixed
	descriptions and formulas of parallel coupled microstrip lines.

2004-08-22  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsubsection{Edwards and Owens}): Documented
	a few more dispersion formulas for microstrip.

2004-08-20  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{S-parameter container with 
	additional reference port}): Documented 'spfile' class
	implementations.
	(subsubsection{Hammerstad and Jensen}): Documented Getsinger's
	dispersion formulas for coupled microstrips.

2004-08-19  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsubsection{Hammerstad and Jensen}):
	Documented coupled microstrip model by Hammerstad and Jensen and
	transmission line losses of coupled lines.

2004-08-17  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (section{Microstrip open}): Revisited
	microstrip open, step, corner and gap documentation.

2004-08-16  Stefan Jahn  <jahn@mwt.ee.tu-berlin.de>

	* technical.tex (subsection{Small signal model}): Documented
	excess phase parameter of BJT model.

2004-08-15  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Jacobi method}): Documented
	Schmidt and v.Mises convergence criteria.

2004-08-14  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Noise model}): Documented
	small signal and noise model of the MOSFET device.

2004-08-12  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Gauss-Seidel method}): Documented
	Gauss-Seidel and Jacobi methods for solving linear equation
	systems (both iterative methods).
	(subsection{Convergence}): Made some additional remarks about
	convergence helpers.

2004-08-07  Stefan Jahn  <stefan@lkcc.org>
