@@ -1,8 +1,8 @@
-%!PS-Adobe-1.0 EPSF-3.0
+%!PS-Adobe-2.0 EPSF-2.0
 %%BoundingBox: 59 95 269 393
 % EPSF created by ps2eps 1.39
 %%Creator: Qt 3.1.2
-%%CreationDate: Tue Jul 27 21:40:27 2004
+%%CreationDate: Mon Sep 6 10:31:14 2004
 %%Orientation: Landscape
 %%DocumentFonts: Helvetica
 
@@ -108,7 +108,7 @@ SM}D
 ] d
 % No embeddable font for Helvetica found
 /Helvetica-ENC-00 [
-/.notdef/R/two/equal/one/zero/space/O/h/m/five/P/I/i/e/hyphen/six/.notdef
+/.notdef/R/two/equal/one/zero/space/O/h/m/five/P/I/i/e/hyphen/six/C/p/F
 /.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
 /.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
 /.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
@@ -135,7 +135,7 @@ SM}D
 /.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
 /.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
 /.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
-/.notdef/.notdef/.notdef/.notdef] def
+/.notdef/.notdef] def
 /Helvetica-Uni-00 Helvetica-ENC-00 HelveticaList MF
 %!PS-AdobeFont-1.0 Composite Font
 25 dict begin
@@ -165,7 +165,7 @@ W BC
 1 1 B 0 0 PE
 F1 F
 145 Y<00010002>15 325 T
-157 Y<00010003000400050006000700080009>59 325 T
+159 Y<00010003000400050006000700080009>59 325 T
 1 2 0 0 128 0 0 PE
 198 91 162 HL
 198 109 91 VL
@@ -175,7 +175,7 @@ F1 F
 210 100 198 HL
 1 1 B 0 0 PE
 126 Y<00010004>15 154 T
-138 Y<00010003000A00050006000700080009>59 154 T
+140 Y<00010003000A00050006000700080009>59 154 T
 1 2 0 0 128 0 0 PE
 210 230 220 VL
 1 3 0 0 128 0 0 PE
@@ -209,7 +209,7 @@ F1 F
 268 148 25 25 1440 5760 A
 1 1 B 0 0 PE
 145 Y<000C0002>10 222 T
-157 Y<000D00030004000E000F0010>39 222 T
+159 Y<000D00030004000E000F0010>39 222 T
 1 2 0 0 128 0 0 PE
 168 70 150 HL
 192 70 210 HL
@@ -227,7 +227,16 @@ F1 F
 168 58 25 25 0 5760 A
 1 1 B 0 0 PE
 34 Y<000C0004>10 154 T
-46 Y<000D00030004000E000F0010>39 154 T
+48 Y<000D00030004000E000F0010>39 154 T
+1 4 0 0 128 0 0 PE
+111 164 89 HL
+111 156 89 HL
+1 2 0 0 128 0 0 PE
+100 164 190 VL
+100 130 156 VL
+1 1 B 0 0 PE
+145 Y<00110004>16 117 T
+159 Y<001100030004000600120013>42 117 T
 1 2 0 0 128 0 0 PE
 310 120 100 VL
 220 70 210 HL
@@ -245,9 +254,10 @@ F1 F
 310 220 200 VL
 310 200 280 HL
 210 220 100 HL
-100 220 100 VL
+100 130 100 VL
 140 100 100 HL
 310 220 210 HL
+100 220 190 VL
 0 0 B 0 0 PE
 1 0 0 128 BR
 308 188 4 4 R
@@ -260,31 +270,35 @@ F1 F
 0 0 B 0 0 PE
 1 0 0 128 BR
 208 98 4 4 R
+1 4 0 0 128 0 0 PE
+NB
+208 218 4 4 E
+308 98 4 4 E
+98 98 4 4 E
 0 0 B 0 0 PE
 1 0 0 128 BR
 278 128 4 4 R
 0 0 B 0 0 PE
 1 0 0 128 BR
 278 188 4 4 R
-1 4 0 0 128 0 0 PE
-NB
-208 218 4 4 E
-308 98 4 4 E
-98 98 4 4 E
-308 118 4 4 E
 0 0 B 0 0 PE
 1 0 0 128 BR
 208 68 4 4 R
-1 4 0 0 128 0 0 PE
-NB
-218 98 4 4 E
-138 98 4 4 E
 0 0 B 0 0 PE
 1 0 0 128 BR
 148 68 4 4 R
 1 4 0 0 128 0 0 PE
 NB
+308 118 4 4 E
+218 98 4 4 E
+138 98 4 4 E
 308 198 4 4 E
+0 0 B 0 0 PE
+1 0 0 128 BR
+98 188 4 4 R
+0 0 B 0 0 PE
+1 0 0 128 BR
+98 128 4 4 R
 QP
 %%Trailer
 cleartomark
