@@ -2194,8 +2194,8 @@ the two nodes) and two off-diagonal entries.
 Once having defined the spectral noise current densities of the noise
 currents within a transistor model the above rules for forming the
 $\underline{C}_Y$ matrix can be applied to the example circuit
-depicted in fig. \ref{fig:CYexample}.  The noise noise current
-correlation matrix is accordingly
+depicted in fig. \ref{fig:CYexample}.  The noise current correlation
+matrix is accordingly
 \begin{equation}
 \underline{C}_Y =
 \begin{bmatrix}
@@ -4515,6 +4515,9 @@ curves are exactly modeled there is no standard strategy to achieve
 this.  Anyway, the threshold voltage $V_{Th}$ should play an important
 role as well as the direction which the current iteration step
 follows.
+
+\chapter{AC Analysis}
+%\addcontentsline{toc}{chapter}{AC Analysis}
 
 \chapter{Non-linear devices}
 %\addcontentsline{toc}{chapter}{Non-linear devices}
