@@ -1,3 +1,9 @@
+2004-09-06  Stefan Jahn  <stefan@lkcc.org>
+
+	* technical.tex (subsection{Forming the noise current
+	correlation matrix}): Fixed the example figure for the
+	noise correlation matrix.
+
 2004-09-03  Stefan Jahn  <stefan@lkcc.org>
 
 	* technical.tex (subsubsection{Pramanick and Bhartia}):
